force-app/main/default/objects/RequiredFieldsConfiguration__mdt/RequiredFieldsConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>Required Field Configuration</label>
    <pluralLabel>Required Field Configurations</pluralLabel>
</CustomObject>