force-app/main/default/objects/RequiredFieldsConfiguration__mdt/fields/FieldAPINames__c.field-meta.xml
<CustomField>
    <fullName>FieldAPINames__c</fullName>
    <inlineHelpText>Each field that should be displayed to the user for editing. Use a comma delimited list e.g. Name,CustomField1__c,CustomField2__c.</inlineHelpText>
    <label>Field API Names</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>