force-app/main/default/objects/RequiredFieldsConfiguration__mdt/fields/RequiredFieldObjectConfiguration__c.field-meta.xml
<CustomField>
    <fullName>RequiredFieldObjectConfiguration__c</fullName>
    <inlineHelpText>The object-level configuration defining the component's basic structure.</inlineHelpText>
    <label>Required Field Object Configuration</label>
    <referenceTo>RequiredFieldsObjectConfiguration__mdt</referenceTo>
    <relationshipLabel>Required Field Configurations</relationshipLabel>
    <relationshipName>Required_Field_Configurations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>