force-app/main/default/objects/RequiredFieldsConfiguration__mdt/fields/StageCompletionAPIName__c.field-meta.xml
<CustomField>
    <fullName>StageCompletionAPIName__c</fullName>
    <inlineHelpText>If required, the number field which will always return a value between 0-100, measuring the completion % of the record in question.</inlineHelpText>
    <label>Stage Completion % API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>