force-app/main/default/objects/RequiredFieldsConfiguration__mdt/fields/StageValue__c.field-meta.xml
<CustomField>
    <fullName>StageValue__c</fullName>
    <label>Stage Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>